Fixed all linter errors and warnings.

--- a/apps/shop/src/index.html
+++ b/apps/shop/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <sample-app-root></sample-app-root>
+    <sa-root></sa-root>
   </body>
 </html>
